# tc2-firmware

./: .gitignore  .travis.yml  Cargo.toml  Embed.toml  README.md  attach-to-running-firmware.sh  clippy.toml  install.sh  pico-debug.sh  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: release.yaml
rp-hal-0.9.0/rp2040-hal/src/: spi.rs  timer.rs
rp-hal/rp2040-hal/src/: rosc.rs  spi.rs
rp-hal/rp2040-hal/src/gpio/: pin.rs  reg.rs
src/: attiny_rtc_i2c.rs  audio_task.rs  bsp.rs  byte_slice_cursor.rs  clock_utils.rs  constants.rs  core0_audio.rs  core0_task.rs  core1_sub_tasks.rs  core1_task.rs  device_config.rs  entry.rs  event_logger.rs  ext_spi_transfers.rs  formatted_time.rs  frame_processing.rs  lepton.rs  lepton_task.rs  lepton_telemetry.rs  main.rs  main_test.rs  motion_detector.rs  onboard_flash.rs  pdm_filter.rs  pdm_microphone.pio  pdm_microphone.rs  pdmfilter.rs  re_exports.rs  rp2040_flash.rs  rpi_power.rs  startup_functions.rs  sub_tasks.rs  sun_times.rs  synced_date_time.rs  tests_main.rs  utils.rs
src/cptv_encoder/: bit_cursor.rs  huffman.rs  mod.rs  streaming_cptv.rs
src/tests/: TESTING.md  helpers.rs  mod.rs  test_global_state.rs
src/tests/mocks/: fake_critical_section.rs  fake_rpi_device_config.rs  fake_rpi_event_logger.rs  fake_rpi_recording_state.rs  fake_shared_spi.rs
src/tests/mocks/bsp/: mod.rs
src/tests/mocks/bsp/hal/: i2c.rs  mod.rs  sio.rs  spi.rs
src/tests/mocks/bsp/pac/: mod.rs
src/tests/stubs/: fake_bsp.rs  fake_i2c.rs  fake_rpi_detection_mask.rs  fake_rpi_device_config.rs  fake_rpi_event_logger.rs  fake_rpi_recording_state.rs  fake_rpi_test_recording_status.rs  fake_shared_spi.rs  fake_timer.rs  mod.rs
src/tests/stubs/bsp/hal/: i2c.rs  mod.rs  sio.rs  spi.rs
src/tests/stubs/bsp/pac/: mod.rs
src/tests/test_state/: mod.rs  test_global_state.rs
src/tests/testing/: audio_cant_keep_up.rs  high_power__always_on__audio_and_thermal.rs  high_power__always_on__audio_disabled.rs  high_power__audio_only.rs  high_power__default_window__audio_and_thermal.rs  high_power__default_window__audio_disabled.rs  high_power__default_window__audio_or_thermal.rs  high_power__fixed_window__audio_and_thermal.rs  high_power__fixed_window__audio_disabled.rs  high_power__fixed_window__audio_or_thermal.rs  low_power__always_on__audio_and_thermal.rs  low_power__always_on__audio_disabled.rs  low_power__audio_only.rs  low_power__default_window__audio_and_thermal.rs  low_power__default_window__audio_disabled.rs  low_power__default_window__audio_or_thermal.rs  low_power__fixed_window__audio_and_thermal.rs  low_power__fixed_window__audio_disabled.rs  low_power__fixed_window__audio_or_thermal.rs  mod.rs  rpi_spi_offload_errors.rs
tc2-firmware/: .gitignore  Cargo.toml  Embed.toml  README.md  install.sh  pico-debug.sh
tc2-firmware/.cargo/: config.toml
tc2-firmware/src/: attiny.rs  attiny_rtc_i2c.rs  bsp.rs  byte_slice_cursor.rs  clock_utils.rs  core0_task.rs  core1_sub_tasks.rs  core1_task.rs  device_config.rs  double_frame_buffer.rs  event_logger.rs  ext_spi_transfers.rs  lepton.rs  main.rs  main_minimal.rs  motion_detector.rs  onboard_flash.rs  pdm_microphone.pio  pdm_microphone.rs  rp2040_flash.rs  soft_spi_slave.pio  sun_times.rs  utils.rs
tc2-firmware/src/cptv_encoder/: bit_cursor.rs  deflate.rs  huffman.rs  mod.rs  streaming_cptv.rs
test-fixtures/: cat-trigger.cptv
