[package]
edition = "2021"
name = "tc2-firmware"
version = "0.1.0"
resolver = "2"

[dependencies]

# bsp dependencies: from rp-hal-boards/rp-pico
cortex-m = "0.7.2"
rp2040-boot2 = { version = "0.3.0", optional = true }
cortex-m-rt = { version = "0.7", optional = true }
usb-device= "0.2.9"

# our dependencies
embedded-hal = { version = "0.2.7", features = ["unproven"] }
embedded-io = "0.5.0"
defmt = "=0.3.2"
defmt-rtt = "0.4"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
byteorder = { version = "1.4.3", default-features = false }
byte-slice-cast = { version = "1.2.1", default-features = false }

numtoa = "0.2.4"
critical-section = "1.1.1"
fugit = "0.3.6"
crc = "3.0.1"
chrono = { version  = "0.4.31", default-features = false }
num-traits = { version = "0.2", default-features = false, features = ["libm"] }

rp2040-hal = { git = "https://github.com/rp-rs/rp-hal.git", rev = "bcb7683512363d0bf17675217bbafe7b050b7dcb", features = ["defmt", "eh1_0_alpha"] }
#rp2040-hal = "0.9.0"
pcf8563 = "0.1.2"

pio = "0.2.1"
pio-proc = "0.2.1"

[features]
# This is the set of features we enable by default
default = ["boot2", "rt", "critical-section-impl", "rom-func-cache"]

# critical section that is safe for multicore use
critical-section-impl = ["rp2040-hal/critical-section-impl"]

# 2nd stage bootloaders for rp2040
boot2 = ["rp2040-boot2"]

# Minimal startup / runtime for Cortex-M microcontrollers
rt = ["cortex-m-rt","rp2040-hal/rt"]

# This enables a fix for USB errata 5: USB device fails to exit RESET state on busy USB bus.
# Only required for RP2040 B0 and RP2040 B1, but it also works for RP2040 B2 and above
rp2040-e5 = ["rp2040-hal/rp2040-e5"]

# Memoize(cache) ROM function pointers on first use to improve performance
rom-func-cache = ["rp2040-hal/rom-func-cache"]

# Disable automatic mapping of language features (like floating point math) to ROM functions
disable-intrinsics = ["rp2040-hal/disable-intrinsics"]

# This enables ROM functions for f64 math that were not present in the earliest RP2040s
rom-v2-intrinsics = ["rp2040-hal/rom-v2-intrinsics"]

#defmt = ["rp2040-hal/defmt"]
#eh1_0_alpha = ["rp2040-hal/eh1_0_alpha"]

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
